--- a/AbsenceMonitor/SchoolAbsenceMonitorUI/GuardianAdmin.xaml
+++ b/AbsenceMonitor/SchoolAbsenceMonitorUI/GuardianAdmin.xaml
@@ -51,36 +51,34 @@
                 <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,0,20">
                     <Label Content="Given Name:" Margin="0,10"/>
                     <Label Content="Surname:" Margin="0,10"/>
-                    <Label Content="Email:" Margin="0,10"/>
+                    <Label Content="Address:" Margin="0,10"/>
                 </StackPanel >
                 <StackPanel Grid.Row="1" Grid.Column="2" Margin="0,0,0,20">
                     <Label Content="Mobile No:" Margin="0,10"/>
                     <Label Content="Emergency No:" Margin="0,10"/>
-                    <Label Content="Address:" Margin="0,10"/>
                 </StackPanel>
 
                 <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" Margin="10,0,0,20">
                     <TextBox Name="TbxGuadianGiven" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="0"/>
                     <TextBox Name="TbxGuadianSurname" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="1"/>
-                    <TextBox Name="TbxGuardianEmail" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
+                    <TextBox Name="TbkGuardianAddress" Grid.Row="1" Grid.Column="1" Height="104" Width="200" Margin="0,10" TextWrapping="Wrap" AcceptsReturn="True" TabIndex="4"/>
                 </StackPanel>
                 <StackPanel Grid.Row="1" Grid.Column="2" Orientation="Vertical" Margin="10,0,0,20">
-                    <TextBox Name="TbxGuadianMobile" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="3"/>
-                    <TextBox Name="TbxGuadianEmergency" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="4"/>
-                    <TextBox Name="TbkGuardianAddress" Grid.Row="1" Grid.Column="1" Height="104" Width="200" Margin="0,10" TextWrapping="Wrap" AcceptsReturn="True" TabIndex="5"/>
-                </StackPanel>
-
-                <StackPanel Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" Orientation="Vertical" Margin="10,0,0,20">
-                    <Button Name="BtnAddGuardian" Height="26" Width="150" Content="Add Guardian" VerticalAlignment="Center" Margin="10,10"/>
-                </StackPanel>
-
-                <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_GuardianErrorLabel"
+                    <TextBox Name="TbxGuadianMobile" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
+                    <TextBox Name="TbxGuadianEmergency" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="3"/>
+                    <StackPanel Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" Orientation="Vertical" Margin="10,0,0,20">
+                        <Button Name="BtnAddGuardian" Height="26" Width="150" Content="Add Guardian" VerticalAlignment="Center" Margin="10,10" Click="BtnAddGuardian_Click"/>
+                        <Button Name="BtnAddGuardianCancel" Height="26" Width="150" Content="Cancel" VerticalAlignment="Center" Margin="10,10" Click="BtnAddGuardianCancel_Click"/>
+                        <Button Name="BtnAddGuardianReturn" Height="26" Width="150" Content="Return" Visibility="Collapsed" VerticalAlignment="Center" Margin="10,10" Click="BtnAddGuardianReturn_Click"/>
+                        <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_GuardianErrorLabel"
                                    FontSize="20"
                                    FontWeight="Bold"
                                    Foreground="Red"
                                    Content="Error Creating New User"
                                    Visibility="Hidden"
                                    HorizontalAlignment="Center"/>
+                    </StackPanel>
+                </StackPanel>
             </Grid>
         </StackPanel>
         <!-- Stack Panel containing the Search Guardian form -->
@@ -99,49 +97,49 @@
                 <ScrollViewer Grid.Row="1"
                               Grid.Column="1"
                               VerticalAlignment="Top"
-                              ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                              Width="900"
+                              ScrollViewer.VerticalScrollBarVisibility="Visible"
+                              Width="800"
                               Margin="10,10"
                               MaxHeight="600">
-                <ListView Name="LstGuardianSearch">
+                    <ListView Name="LstGuardianSearch" SelectedValuePath="GuardianId">
                     <ListView.View>
                         <GridView>
-                            <GridViewColumn Header="GuardianID" Width="100">
+                            <GridViewColumn Header="GuardianID" Width="75">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
                                         <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding GuardianId}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn Header="Given Name" Width="150">
+                            <GridViewColumn Header="Given Name" Width="100">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
                                         <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding GivenName}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn Header="Surname" Width="150">
+                            <GridViewColumn Header="Surname" Width="100">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
                                         <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding Surname}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn Header="Mobile No." Width="150">
+                            <GridViewColumn Header="Mobile No." Width="100">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
                                         <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding MobileNo}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn Header="Emergency No." Width="150">
+                            <GridViewColumn Header="Emergency No." Width="100">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
                                         <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding EmergencyNo}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn Header="Address" Width="300">
+                            <GridViewColumn Header="Address" Width="250">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
                                         <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding Address}"/>
@@ -152,12 +150,12 @@
                     </ListView.View>
                     <ListView.ContextMenu>
                         <ContextMenu Name="MnuGuardianSearchContext" IsEnabled="True">
-                            <MenuItem Header="Update Guardian" Name="MnuIUpdateGuardian" IsEnabled="True">
+                            <MenuItem Header="Update Guardian" Name="MnuIUpdateGuardian" IsEnabled="True" Click="MnuIUpdateGuardian_Click">
                                 <MenuItem.Icon>
                                     <Image Source="Images/icon.png"  Width="20" Height="20" Stretch="UniformToFill"/>
                                 </MenuItem.Icon>
                             </MenuItem>
-                            <MenuItem Header="Delete Guardian" Name="MnuIDeleteGuardian" IsEnabled="True">
+                            <MenuItem Header="Delete Guardian" Name="MnuIDeleteGuardian" IsEnabled="True" Click="MnuIDeleteGuardian_Click">
                                 <MenuItem.Icon>
                                     <Image Source="Images/rubbish-bin.png" Width="20" Height="20" Stretch="UniformToFill" />
                                 </MenuItem.Icon>
@@ -180,8 +178,7 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="10*"/>
                     <RowDefinition Height="20*"/>
-                    <RowDefinition Height="20*"/>
-                    <RowDefinition Height="20*"/>
+                    <RowDefinition Height="40*"/>
                     <RowDefinition Height="10*"/>
                 </Grid.RowDefinitions>
 
@@ -196,39 +193,35 @@
                 <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,0,20">
                     <Label Content="Given Name:" Margin="0,10"/>
                     <Label Content="Surname:" Margin="0,10"/>
-                    <Label Content="Email:" Margin="0,10"/>
-                    <Label Content="Guardian ID:" Margin="0,10"/>
+                    <Label Content="Address:" Margin="0,10"/>
                 </StackPanel>
 
                 <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" Margin="10,0,0,20">
                     <TextBox Name="TbxUpdateGuardianGiven" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="0"/>
                     <TextBox Name="TbxUpdateGuardianSurname" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="1"/>
-                    <TextBox Name="TbxUpdateGuardianEmail" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
-                    <TextBox Name="TbxUpdateGuardianID" IsEnabled="False" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center"/>
+                    <TextBox Name="TbxUpdateAddress" Grid.Row="1" Grid.Column="1" Height="104" Width="200" Margin="0,10" TabIndex="5" TextWrapping="Wrap" AcceptsReturn="True"/>
                 </StackPanel>
-
                 <StackPanel Grid.Row="1" Grid.Column="2" Margin="0,0,0,20">
                     <Label Content="Mobile No:" Margin="0,10"/>
                     <Label Content="Emergency No:" Margin="0,10"/>
-                    <Label Content="Address:" Margin="0,10"/>
+                    <Label Content="Guardian ID:" Margin="0,10"/>
                 </StackPanel>
-
                 <StackPanel Grid.Row="1" Grid.Column="2" Orientation="Vertical" Margin="10,0,0,20">
                     <TextBox Name="TbxUpdateGuardianMobile" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="3"/>
                     <TextBox Name="TbxUpdateGuardianEmerg" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="4"/>
-                    <TextBox Name="TbxUpdateAddress" Grid.Row="1" Grid.Column="1" Height="104" Width="200" Margin="0,10" TabIndex="5" TextWrapping="Wrap" AcceptsReturn="True"/>
-                </StackPanel>
-
-                <StackPanel Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center" Orientation="Vertical" Margin="10,0,0,20">
-                    <Button Name="BtnUpdateGuardian" Height="26" Width="150" Content="Update Guardian" Margin="15,15"/>
-                </StackPanel>
-
-                <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_GuardianUpdateErrorLabel"
+                    <TextBox Name="TbxUpdateGuardianID" IsEnabled="False" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center"/>
+                    <StackPanel Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center" Orientation="Vertical" Margin="10,0,0,20">
+                        <Button Name="BtnUpdateGuardian" Height="26" Width="150" Content="Update Guardian" Margin="15,15" Click="BtnUpdateGuardian_Click"/>
+                        <Button Name="BtnUpdateGuardianCancel" Height="26" Width="150" Content="Cancel" Margin="15,15" Click="BtnUpdateGuardianCancel_Click"/>
+                        <Button Name="BtnUpdateGuardianReturn" Height="26" Width="150" Content="Return" Visibility="Collapsed" Margin="15,15" Click="BtnUpdateGuardianReturn_Click"/>
+                        <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_GuardianUpdateErrorLabel"
                                    FontSize="20"
                                    FontWeight="Bold"
                                    Foreground="Red"
                                    Content="Error Updating the Guardian"
                                    Visibility="Hidden"/>
+                    </StackPanel>
+                </StackPanel>               
             </Grid>
         </StackPanel>
         <!-- Stack Panel containing the Delete Guardian form -->
@@ -259,18 +252,22 @@
                 <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,0,20">
                     <Label Content="Given Name:" Margin="0,10"/>
                     <Label Content="Surname:" Margin="0,10"/>
+                    <Label Content="MobileNo:" Margin="0,10"/>
                     <Label Content="Guardian ID:" Margin="0,10"/>
                 </StackPanel>
 
                 <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" Margin="10,0,0,20">
                     <TextBox Name="TbxDeleteGuardianGiven" IsEnabled="False" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
                     <TextBox Name="TbxDeleteGuardianSurname" IsEnabled="False" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
+                    <TextBox Name="TbxDeleteMobileNo" IsEnabled="False" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
                     <TextBox Name="TbxDeleteGuardianID" IsEnabled="False" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
                 </StackPanel>
 
 
                 <StackPanel Grid.Row="1" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Vertical" Margin="10,0,0,20">
-                    <Button Name="BtnDeleteGuardian" Height="26" Width="150" Content="Delete Guardian" Margin="15,15"/>
+                    <Button Name="BtnDeleteGuardian" Height="26" Width="150" Content="Delete Guardian" Margin="15,15" Click="BtnDeleteGuardian_Click"/>
+                    <Button Name="BtnDeleteCancel" Height="26" Width="150" Content="Cancel" Margin="15,15" Click="BtnDeleteCancel_Click"/>
+                    <Button Name="BtnDeleteReturn" Height="26" Width="150" Visibility="Collapsed" Content="Return" Margin="15,15" Click="BtnDeleteReturn_Click"/>
                 </StackPanel>
 
                 <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_GuardianDeleteErrorLabel"
